<resources>
    <string name="app_name">Lista de Contatos</string>
    <string name="password">Password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up!</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="admin">admin</string>
    <string name="password2">password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="please_insert_all_required_fields">Please insert all required fields</string>
    <string name="signup_ok">Signup ok</string>
    <string name="signup_error">Signup error</string>
    <string name="login_error">Login Error</string>
    <string name="logout">logout</string>
    <string name="lista_de_contatos">Lista de Contatos</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="new_contact">New Contact</string>
    <string name="select_an_image">Select an Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="contact_details">Contact Details</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="nome">Nome</string>
</resources>