<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="100dp"
    tools:context=".ui.ContactDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contact_details"
        android:textSize="30sp">
    </TextView>

    <ImageView
        android:id="@+id/image_contact"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/perfil">
    </ImageView>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:enabled="false"
        android:hint="@string/name">
    </EditText>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:enabled="false"
        android:hint="@string/address">
    </EditText>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:hint="@string/email">
    </EditText>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:enabled="false"
        android:inputType="phone"
        android:hint="@string/phone">
    </EditText>

    <LinearLayout
        android:id="@+id/Layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/edit">
        </Button>

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/back">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:layout_marginHorizontal="5dp"
            android:text="@string/save">
        </Button>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:layout_marginHorizontal="5dp"
            android:text="@string/cancel">
        </Button>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/delete">
        </Button>

    </LinearLayout>

</LinearLayout>