<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:paddingTop="30dp"
        android:src="@drawable/contacts">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:orientation="vertical">
        
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableStart="@drawable/baseline_person_24"
            android:hint="@string/username"
            android:text="admin">
        </EditText>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:drawableStart="@drawable/baseline_lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@string/password2">
        </EditText>
        
        <CheckBox
            android:id="@+id/checkbox_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged">
        </CheckBox>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login">
        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/don_t_have_account_sign_up">
    </TextView>

    <TextView
        android:id="@+id/text_recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_signup"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/recover_your_password">
    </TextView>

</RelativeLayout>